--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
 
-<div class="contaier-fluid">
+<div class="container-fluid">
     <div class="row rw1">
         <nav class="navbar">
             <ul>
@@ -35,18 +35,20 @@
         </div>
     </div>
 
-            <div class="row rww3">
-                <div class="col clo2"></div>
-                <div class="col clo2"></div>
-            </div>
-            <div class="row rww3">
-                <div class="col clo2"></div>
-                <div class="col clo2"></div>
-            </div>
-            <div class="row rww3">
-                <div class="col clo2"></div>
-                <div class="col clo2"></div>
-            </div>
+    <div class="row rww4">
+        <div class="col"></div>
+        <div class="col"> About Me </div>
+        <div class="col"></div>
+    </div>
+
+    <div class="row rww3">
+        <div class="col"></div>
+        <div class="col">
+            Currently, my future is planed with the pursuit of higher education as I plan to go to college. Although the specific field is undecided, through research, I aim to select a course that aligns with my interests. My main goal is to achieve an education that is enjoyable and fulfilling.
+            <br>
+
+        </div>
+        </div>
 
 
 
