--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
         </div>
     </div>
 
+    <div class="row rww5">
+        <div class="col">
+            <hr class="hr1 justify-center-center">
+
+        </div>
+    </div>
+
     <div class="row rww4">
         <div class="col"></div>
         <div class="col"> About Me </div>
@@ -42,7 +49,9 @@
     </div>
 
     <div class="row rww3">
-        <div class="col"></div>
+        <div class="col">
+            <img src="https://thumb.ac-illust.com/9d/9d5dd4bfcaace96c6bd9f90326e85ff2_t.jpeg" alt="desk">
+        </div>
         <div class="col">
             Currently, my future is planed with the pursuit of higher education as I plan to go to college. Although the specific field is undecided, through research, I aim to select a course that aligns with my interests. My main goal is to achieve an education that is enjoyable and fulfilling.
             <br>
@@ -50,6 +59,29 @@
         </div>
         </div>
 
+        <div class="row rww5">
+            <div class="col">
+                <hr class="hr1 justify-center-center">
+    
+            </div>
+        </div>
+
+    <div class="row rww4">
+        <div class="col"></div>
+        <div class="col"> My Education </div>
+        <div class="col"></div>
+    </div>
+
+    <div class="row rww3">
+        <div class="col">
+            <img src="img/circle-logo.png" alt="circle">
+        </div>
+        <div class="col">
+            <p>I have learned HTML, CSS, Bootstrap, and JavaScript. I am also in a CTE course.</p>
+
+        </div>
+        </div>
+    
 
 
 </div>
