--- a/index.html
+++ b/index.html
@@ -81,7 +81,78 @@
 
         </div>
         </div>
+
+
+        <div class="row rww5">
+            <div class="col">
+                <hr class="hr1 justify-center-center">
     
+            </div>
+        </div>
+
+
+    <div class="row rww6">
+        <div class="col">
+            <h1 class="headings">My Work</h1>
+        </div>
+        </div>
+        <div class="row rww6">
+
+                <div class="col">
+                    <img src="img/Pimg1.jpg" alt="">
+                </div>
+        
+                <div class="col">
+                    <img src="img/Pimg2.jpg" alt="">
+                </div>
+
+        </div>
+
+        <div class="row rww6">
+            <div class="col">
+                <img src="img/Pimg3.jpg" alt="">
+            </div>
+            <div class="col">
+                <img src="img/Pimg4.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="row rww6">
+            <div class="col">
+                <img src="img/Pimg5.jpg" alt="">
+            </div>
+            <div class="col">
+                <img src="img/Pimg6.jpg" alt="">
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
 
 
 </div>
