--- a/index.html
+++ b/index.html
@@ -28,10 +28,21 @@
         </nav>
     </div>
 
+    <div class="row rww7">
+        <div class="col">
+            <hr class="hr1 justify-center-center">
+
+        </div>
+    </div>
+    
+
 
     <div class="row rww2">
         <div class="col">
-            <hr class="hr1 justify-center-center">
+
+        </div>
+        <div class="col">
+            <h3>Dominic Miguel</h3>
         </div>
     </div>
 
@@ -44,17 +55,17 @@
 
     <div class="row rww4">
         <div class="col"></div>
-        <div class="col"> About Me </div>
+        <div class="col top"> <p>About Me</p> </div>
         <div class="col"></div>
     </div>
 
     <div class="row rww3">
         <div class="col">
-            <img src="https://thumb.ac-illust.com/9d/9d5dd4bfcaace96c6bd9f90326e85ff2_t.jpeg" alt="desk">
+            <img src="img/meagn.jpg" alt="desk">
         </div>
         <div class="col">
-            Currently, my future is planed with the pursuit of higher education as I plan to go to college. Although the specific field is undecided, through research, I aim to select a course that aligns with my interests. My main goal is to achieve an education that is enjoyable and fulfilling.
-            <br>
+
+            At present, I am diligently strategizing my path toward higher education, intending to enroll in college. Although I have yet to pinpoint a specific field of study, I am actively engaged in thorough research to identify a program that harmonizes with my interests. My primary aim is to secure an educational journey characterized by enjoyment and personal fulfillment.            <br>
 
         </div>
         </div>
@@ -68,7 +79,7 @@
 
     <div class="row rww4">
         <div class="col"></div>
-        <div class="col"> My Education </div>
+        <div class="col"> <p>Education</p> </div>
         <div class="col"></div>
     </div>
 
@@ -77,7 +88,7 @@
             <img src="img/circle-logo.png" alt="circle">
         </div>
         <div class="col">
-            <p>I have learned HTML, CSS, Bootstrap, and JavaScript. I am also in a CTE course.</p>
+            I have learned HTML, CSS, Bootstrap, and JavaScript. I am also in a CTE course.
 
         </div>
         </div>
@@ -93,36 +104,48 @@
 
     <div class="row rww6">
         <div class="col">
-            <h1 class="headings">My Work</h1>
+            <h1 class="headings"><p>My Work</p></h1>
         </div>
         </div>
         <div class="row rww6">
 
                 <div class="col">
                     <img src="img/Pimg1.jpg" alt="">
+                    <br>
+                    <h2>CSS Animation</h2>
                 </div>
         
                 <div class="col">
-                    <img src="img/Pimg2.jpg" alt="">
+                    <img src="img/Pimg2.png" alt="">
+                    <br>
+                    <h2>Musician Website</h2>
                 </div>
 
         </div>
 
         <div class="row rww6">
             <div class="col">
-                <img src="img/Pimg3.jpg" alt="">
+                <img src="img/Pimg3.png" alt="">
+                <br>
+                <h2> JS Button Events</h2>
             </div>
             <div class="col">
-                <img src="img/Pimg4.jpg" alt="">
+                <img src="img/Pimg4.png" alt="">
+                <br>
+                <h2>JS Game</h2>
             </div>
         </div>
 
         <div class="row rww6">
             <div class="col">
-                <img src="img/Pimg5.jpg" alt="">
+                <img src="img/Pimg5.png" alt="">
+                <br>
+                <h2>CSS Colors</h2>
             </div>
             <div class="col">
                 <img src="img/Pimg6.jpg" alt="">
+                <br>
+                <h2>CSS Animation</h2>
             </div>
         </div>
 
