--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         </div>
         <div class="col">
-            <h3>Dominic Miguel</h3>
+            <h3 class="headings">Dominic Miguel</h3>
         </div>
     </div>
 
@@ -149,7 +149,17 @@
             </div>
         </div>
 
-
+        <div class="row rww8">
+            <div class="col">
+                <h1 class="headings">Contact Me</h1>
+                <form action="" class="form">
+                    <input type="text" name="name" class="input" placeholder="Enter Your Name">
+                    <input type="text" name="email" class="input" placeholder="Enter Your Email">
+                    <textarea name="msg" id="msg" cols="30" row="10" placeholder="Enter Your Message"></textarea>
+                    <input type="submit" value="SEND" id="send">
+                </form>
+            </div>
+        </div>
 
 
 
