--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
 
         <div class="row rww8">
             <div class="col">
-                <h1 class="headings">Contact Me</h1>
+                <h1 class="headings">
+                    <p>Contact Me</p>
+                </h1>
                 <form action="" class="form">
                     <input type="text" name="name" class="input" placeholder="Enter Your Name">
                     <input type="text" name="email" class="input" placeholder="Enter Your Email">
